fix: overflowing toast message

--- a/css/components/toast.css
+++ b/css/components/toast.css
@@ -38,8 +38,9 @@
 
 .demo-toast {
   position: fixed;
-  left: 25%;
-  right: 25%;
+  left: 0;
+  right: 0;
+  margin: 0 1rem;
   bottom: 4rem;
   display: flex;
   align-items: center;
